# OIDCWarden

./: .env.template  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  SSO.md  build.rs
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml  releasecache-cleanup.yml  trivy.yml
docker/: DockerSettings.yaml  Dockerfile.alpine  Dockerfile.debian  Dockerfile.j2  README.md  docker-bake.hcl  podman-bake.sh  pyproject.toml  start.sh
docker/authentik/: .env.template  .gitignore  README.md  docker-compose.yml  pg_init.sql
docker/keycloak/: setup.dockerfile
docker/zitadel/: .env.template  .gitignore  docker-compose.yml
playwright/: .env.template  README.md  docker-compose.yml  global-setup.ts  global-utils.ts  package-lock.json  package.json  playwright.config.ts  test.env
playwright/compose/: keycloak_setup.dockerfile
playwright/tests/: collection.spec.ts  cyphers.spec.ts  login.smtp.spec.ts  login.spec.ts  organization.smtp.spec.ts  organization.spec.ts  secrets.spec.ts  send.spec.ts  sso_groups.spec.ts  sso_groups_auto.spec.ts  sso_groups_groups.spec.ts  sso_groups_revoke.spec.ts  sso_groups_revoke_disabled.spec.ts  sso_groups_roles.spec.ts  sso_login.smtp.spec.ts  sso_login.spec.ts  sso_organization.smtp.spec.ts  sso_organization.spec.ts  sso_organization_auto.smtp.spec.ts  sso_roles.spec.ts  sso_trusted.spec.ts  sso_trusted_device.spec.ts
src/: auth.rs  config.rs  error.rs  mail.rs  main.rs  sso.rs  sso_client.rs  util.rs
src/api/: admin.rs  identity.rs  user_decryption.rs  web.rs
src/auth/: send.rs
src/db/: mod.rs  (+1 more)
(+101 files in other folders)
