[tool.poetry]
name = "docker"
version = "0.1.0"
description = ""
authors = ["Timshel <Timshel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
argparse = "^1.4.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
